// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params env var overrides local templates 1`] = `
Object {
  "action": undefined,
  "generator": "dont-take-this",
  "templates": "app",
}
`;

exports[`params takes default folder 1`] = `
Object {
  "action": undefined,
  "generator": "famboozle",
  "templates": "app",
}
`;

exports[`params underscored templates 1`] = `
Object {
  "action": undefined,
  "generator": "dont-take-this",
  "templates": "app",
}
`;
